[JR] updated to TE references

--- a/default_config/config.yml
+++ b/default_config/config.yml
@@ -1,7 +1,7 @@
 &defaults_config
 
 global:
-  environment: local
+  environment: RMS_sandbox
 
   test_types: [browser] # api, browser, mobile_app
 
