--- a/default_config/browser.yml
+++ b/default_config/browser.yml
@@ -2,12 +2,12 @@
 
 source: local # local, browserstack, perfecto, sauce_labs, kobiton, local_device
 
-default_timeout: 20
-implicit_wait: 10
+default_timeout: 30
+implicit_wait: 0
 page_load_timeout: 20
 
 same_browser: true
-close_browser: false
+close_browser: true
 clear_cookies: true
 
 local:
