[SP] WareHouse vwh_addr.

--- a/features/support/data/data.yml
+++ b/features/support/data/data.yml
@@ -139,12 +139,12 @@ OC: '999' #Other Country
 
 ### Code ###
 
-v_code_1: "AUD00"	#GST @ STD RATE SALES (OUTPUT)
-v_code_2: "AUD01"	#GST @ STD RATE-ALL PURCHASES
-v_code_3: "AUD02"	#GST@STD RATE-PETTY CASH EXP
-v_code_49: "RSA01"	#RSA Standard
-v_code_54: "RSAEX"	#RSA Exempt
-v_code_55: "RSAZE"	#RSA Zero Rated
+v_code_1: "AUD00"    #GST @ STD RATE SALES (OUTPUT)
+v_code_2: "AUD01"    #GST @ STD RATE-ALL PURCHASES
+v_code_3: "AUD02"    #GST@STD RATE-PETTY CASH EXP
+v_code_49: "RSA01"    #RSA Standard
+v_code_54: "RSAEX"    #RSA Exempt
+v_code_55: "RSAZE"    #RSA Zero Rated
 
 ########################### SUPPLIER  ############################################
 
@@ -291,14 +291,19 @@ Warehouse:
 
   #virtual warehouse#
 
-  vwh: '8'
-  name: 'test_08'
+  #  vwh: '8'
+  name: 'test_08_vwh'
   org_en_type_opt: 'Regular Warehouse'
   transfer_entity: '1000'
   org_unit: '1001'
   channel: '1'
   pricing_location: '10012'
-
   primary_virtual_warehouse: '9'
 
+  # Edit Warehouse #
 
+  edit_warehouse: '9800'
+  updated_warehouse_name: 'test_update'
+  updated_vat_region: '71'
+  updated_delivery_option: 'Next Day'
+  updated_inblund_days: '8'
