[CB] Supplier Site - @SUP-10 @SUP-11 @SUP-12 @SUP-13

--- a/features/support/data/data.yml
+++ b/features/support/data/data.yml
@@ -201,6 +201,9 @@ delivery_schedule: 'Delivery Schedule'
 
 invoicing_attributes: 'Invoicing Attributes'
 
+## Supplier Trait
+supp_trait: '1'
+
 ########################### Partner  ############################################
 
 ## Search ##
