[SP] BWS_ITEMS_01_05.

--- a/features/support/data/data.yml
+++ b/features/support/data/data.yml
@@ -396,4 +396,20 @@ BWS:
     Cost: '500.00'
     Supplier_Pack_Size: '1'
 #    Inner_Pack_Size: '20'
+    Packing_Method: 'Flat'
 
+  copy_from_existing:
+    existing_item: '100010268'
+    existing_supplier: '100611'
+    existing_country_of_source: 'ZA'
+    main_desc: 'TestTeam'
+    marketing_desc: 'test'
+    detail_desc: 'Test Team'
+    supplier_site: '100424 - HOM  NEW WECHSLER PTY LTD'
+    country_of_sourcing:  'ZA - South Africa'
+    Country_of_Manufacture: 'ZA - South Africa'
+    cost_zone_group_id: '1000 - MRP Cost Group'
+    cost: '500.00'
+    packing_method: 'Flat'
+    inner_pack_size: '1'
+    case_pack_qty: '10'
