[SP] BWS_ITEMS_updated BWS01-05 and BWS-06.

--- a/features/support/data/data.yml
+++ b/features/support/data/data.yml
@@ -384,7 +384,7 @@ BWS:
     Sub_Department: '44 - Test Sub-Department'
     Category: '1 - Test Category'
     Sub_Category: '1 - Change Sub Category'
-    Main_Desc: 'test (Sachin)'
+    Main_Desc: 'test team'
     Marketing_Desc: 'test'
     Differentiator_1: 'COFFEE'
     Differentiator_2: '927 - Sport Sizes'
@@ -403,7 +403,7 @@ BWS:
     existing_supplier: '100611'
     existing_country_of_source: 'ZA'
     main_desc: 'TestTeam'
-    marketing_desc: 'test'
+    marketing_desc: 'test team'
     detail_desc: 'Test Team'
     supplier_site: '100424 - HOM  NEW WECHSLER PTY LTD'
     country_of_sourcing:  'ZA - South Africa'
