--- a/features/support/data/data.yml
+++ b/features/support/data/data.yml
@@ -371,6 +371,27 @@ Warehouse:
   expected_error2: 'The entered value is already used by a store, warehouse, or external finisher. Enter a new value.'
   expected_error3: 'Cannot delete a primary virtual warehouse. To delete this warehouse, you must select a new primary virtual warehouse for the physical warehouse or delete the physical warehouse itself.'
 
+################################ Location List ########################################
+
+location_list_id: '75003'
+
+division_chain: '5' #org hier
+
+location_type_1: 'Store'
+location_type_2: 'Warehouse'
+
+static: 'Y' #when static checkbox is mark, the STATIC_IND should be Y
+dynamic: 'N'  #when static checkbox is NOT mark, STATIC_IND should be N
+
+db_location_type_1: 'S'
+db_location_type_2: 'W'
+
+
+# Location List More options #
+location_option: 'Locations'
+criteria_option: 'Criteria'
+location_list_rebuild_option: 'Location List Rebuild'
+
   #---------------------------#
   #############################
   ## Buyers Work Sheet - BWS ##
@@ -395,6 +416,7 @@ BWS:
     Cost_Zone_Group_ID: '1000 - MRP Cost Group'
     Cost: '500.00'
     Supplier_Pack_Size: '1'
+    Inner_Pack_Size: '20'
 #    Inner_Pack_Size: '20'
     Packing_Method: 'Flat'
 
