--- a/environments/environments.yml
+++ b/environments/environments.yml
@@ -9,16 +9,23 @@ RMS_sandbox:
   bws_url: http://opomomapp01:15102/olr-fusion-retail-express/faces/login.jsf
   bws_buyer: admin
   bws_buyer_pw: Welcome123
-  url: http://opomomapp01:11002/Rms/faces/RmsLogin
+
+  url: http://opomomapp03:11002/Rms/faces/RmsLogin
+  #url: http://opomomapp01:11002/Rms/faces/RmsLogin
   user: RMS_ADMIN
   pw: Welcome123
   db_hostname: 192.168.112.71
   db_port: 1521
   db_servicename: pdbmom
   db_username: rms
+  db_bws_username: oao
   db_password: Welcome123
   env_timeout: 30
   test_data_file: data.yml
   db_server: OPOMOMDB01
   unix_username: oretail
   unix_pwd: welcome
+
+
+
+
