--- a/environments/environments.yml
+++ b/environments/environments.yml
@@ -19,7 +19,8 @@ RMS_sandbox:
   db_servicename: pdbmom
   db_username: rms
   db_bws_username: oao
-  db_password: Welcome123
+  db_bws_username: oao #swingtag
+  db_password: Welcome123 #swingtag
   env_timeout: 30
   test_data_file: data.yml
   db_server: OPOMOMDB01
